Bug 1101037 - Fixed dom/media/gmp compilation with mingw. r=nfroyd